@@ -1,4 +1,4 @@
-{* $Header: /cvsroot/tikiwiki/tiki/templates/tiki-pagepermissions.tpl,v 1.8 2003-08-01 10:31:11 redflo Exp $ *}
+{* $Header: /cvsroot/tikiwiki/tiki/templates/tiki-pagepermissions.tpl,v 1.9 2003-09-21 18:12:31 lueders Exp $ *}
 
 <h2>{tr}Assign permissions to page{/tr}: {$page}</h2>
 <h3>{tr}Current permissions for this page{/tr}:</h3>
@@ -10,27 +10,31 @@
   <td class="{cycle advance=false}">{$page_perms[pg].groupName}</td>
   <td class="{cycle advance=false}">{$page_perms[pg].permName}</td>
   <td class="{cycle}">
-    (<a class="link" href="tiki-pagepermissions.php?referer={$referer}&amp;action=remove&amp;objectName={$objectName}&amp;objectId={$objectId}&amp;objectType={$objectType}&amp;permType={$permType}&amp;page={$page}&perm={$page_perms[pg].permName}&group={$page_perms[pg].groupName}">{tr}remove{/tr}</a>)
+    (<a class="link" href="tiki-pagepermissions.php?referer={$referer}&amp;action=remove&amp;objectName={$objectName}&amp;objectId={$objectId}&amp;objectType={$objectType}&amp;permType={$permType}&amp;page={$page}&perm={$page_perms[pg].permName}&group={$page_perms[pg].groupName}">{tr}remove from this page{/tr}</a>)
+    (<a class="link" href="tiki-pagepermissions.php?referer={$referer}&amp;action=removestructure&amp;objectName={$objectName}&amp;objectId={$objectId}&amp;objectType={$objectType}&amp;permType={$permType}&amp;page={$page}&perm={$page_perms[pg].permName}&group={$page_perms[pg].groupName}">{tr}remove from this structure{/tr}</a>)
   </td></tr>
 {sectionelse}
 <tr><td>{tr}No individual permissions global permissions apply{/tr}</td></tr>
 {/section}
 </table>
-<h3>{tr}Assign permissions to this page{/tr}</h3>
+<h3>{tr}Assign permissions{/tr}</h3>
 <form method="post" action="tiki-pagepermissions.php">
+{tr}assign{/tr}
 <input type="hidden" name="page" value="{$page|escape}" />
-<input type="submit" name="assign" value="{tr}assign{/tr}" />
 <select name="perm">
 {section name=prm loop=$perms}
 <option value="{$perms[prm].permName|escape}">{$perms[prm].permName}</option>
 {/section}
 </select>
-{tr}to group{/tr}:
+{tr}to group{/tr}
 <select name="group">
 {section name=grp loop=$groups}
 <option value="{$groups[grp].groupName|escape}">{$groups[grp].groupName}</option>
 {/section}
 </select>
+{tr}for{/tr}
+<input type="submit" name="assign" value="{tr}this page{/tr}" />
+<input type="submit" name="assignstructure" value="{tr}this structure{/tr}" />
 </form>
 <h2>{tr}Send email notifications when this page changes to{/tr}:</h2>
 <form action="tiki-pagepermissions.php" method="post">
